--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,42 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200;12..96,300;12..96,400;12..96,500;12..96,600;12..96,700;12..96,800&display=swap');
+*{
+  font-family: 'Bricolage Grotesque', sans-serif;
+}
+:root{
+  --white:#f7f2ee;
+  --black:#000000;
+  --brown:#341d08;
+}
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  min-height: 100vh;
+
+}
+body::-webkit-scrollbar {
+  width: 15px;
+
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body::-webkit-scrollbar-thumb {
+  background-color: var(--brown);
+  border-radius: 3px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Personalização da barra de rolagem para navegadores Gecko (Firefox) */
+body {
+  scrollbar-width: thin;
+  scrollbar-color: var(--brown); 
+}
+
+.nav-btn{
+  visibility: hidden;
+  opacity: 0;
+  font-size: 30px;
+}
+.nav-close-btn{
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+}
+@media only screen and (max-width:1024px){
+  .nav-btn{
+    visibility: visible;
+    opacity: 1;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
